# Convert-My-Images

./: LICENSE  README.md  install.sh  setup.cfg
src/: convertmyimages.sh  main.py  messages.py
