[metadata]
name = ConvertMyImages
version = 0.1.0
author = Ajay Agrawal
author_email = ajayagrawalhere@gmail.com
description = A tool which lets you convert Images to different formats in Bulk.
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/ajayagrawalgit/Convert-My-Images
project_urls =
    Bug Tracker = https://github.com/ajayagrawalgit/Convert-My-Images/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
